<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SocialAd</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="email">Email</string>
    <string name="psw">Password</string>
    <string name="confirm_psw">Confirm Password</string>
    <string name="register">Create Account</string>
    <string name="login">Log in</string>
    <string name="link_register">Do not have an account? Register now</string>
    <string name="oAuth">or Log in with:</string>
    <string name="username">Username</string>
    <string name="fullname">Full name</string>
    <string name="location">City</string>
    <string name="save">Save</string>
    <string name="title_activity_maps">Map</string>
</resources>