<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".SetupActivity"
    android:id="@+id/setup_layout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/setup_profile_img"
                android:layout_width="@dimen/img_profile"
                android:layout_height="@dimen/img_profile"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/distance"
                android:src="@drawable/profile_img" />

            <EditText
                android:id="@+id/setup_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/box_border"
                android:layout_marginTop="@dimen/distance"
                android:layout_marginRight="@dimen/box_border"
                android:background="@drawable/inputs"
                android:drawableLeft="@drawable/create"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/username"
                android:inputType="textMultiLine"
                android:padding="@dimen/text_field"
                android:drawablePadding="@dimen/box_border"/>

            <EditText
                android:id="@+id/setup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/box_border"
                android:layout_marginTop="@dimen/distance"
                android:layout_marginRight="@dimen/box_border"
                android:background="@drawable/inputs"
                android:drawableLeft="@drawable/user"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/fullname"
                android:inputType="textMultiLine"
                android:padding="@dimen/text_field"
                android:drawablePadding="@dimen/box_border"/>

            <EditText
                android:id="@+id/setup_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/box_border"
                android:layout_marginTop="@dimen/distance"
                android:layout_marginRight="@dimen/box_border"
                android:background="@drawable/inputs"
                android:drawableLeft="@drawable/location"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/location"
                android:inputType="textMultiLine"
                android:padding="@dimen/text_field"
                android:drawablePadding="@dimen/box_border"/>

            <TextView
                android:layout_marginTop="@dimen/distance"
                android:layout_marginLeft="@dimen/box_border"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Status:"
                android:textColor="@color/black"
                android:textSize="@dimen/text"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/box_border">
                <RadioButton android:id="@+id/teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Teacher"
                    android:layout_marginRight="@dimen/box_border"/>
                <RadioButton android:id="@+id/student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Student"
                    android:layout_marginLeft="@dimen/box_border"/>
            </RadioGroup>

            <Button
                android:id="@+id/setup_save_btn"
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/distance"
                android:background="@drawable/button"
                android:padding="@dimen/btn"
                android:text="@string/save"
                android:textSize="@dimen/btn_text" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>